syntax = "proto3";

package services;

service GetBucketMeta {
  rpc GetBucketMeta (Request) returns (Response);
}

message Request {
  string bucketName = 1; 
  string userId = 2;
}

message Response {
  uint32 statusCode = 1;
}